--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <div class="container">
       <!-- Timeblocks go here -->
     </div>
-
+    <script type="text/Javascript" src="script.js"></script>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
   </body>
